--- a/layouts/partials/complementary.html
+++ b/layouts/partials/complementary.html
@@ -5,17 +5,17 @@
   </form>
 
   {{ with .Scratch.Get "rss" -}}
-    <p><a type="application/rss+xml" title="RSS feed" href="{{ .Permalink }}"><img src="{{ $.Scratch.Get "svg" }}#rss" alt="" style="width: 16px; height: 16px;"> RSS feed</a></p>
+    <p><a class="iconLink rss" type="application/rss+xml" title="RSS feed" href="{{ .Permalink }}">RSS feed</a></p>
   {{ end -}}
 
   <h4>External links</h4>
-  <ul class="linklist" style="list-style: none;">
-    <li><a rel="me" href="https://twitter.com/WPalant"><img src="{{ .Scratch.Get "svg" }}#twitter" alt="" style="width: 16px; height: 16px;"> Twitter</a></li>
-    <li><a rel="me" href="https://infosec.exchange/@WPalant"><img src="{{ .Scratch.Get "svg" }}#mastodon" alt="" style="width: 16px; height: 16px;"> Mastodon</a></li>
-    <li><a rel="me" href="https://social.tchncs.de/@WPalant"><img src="{{ .Scratch.Get "svg" }}#mastodon" alt="" style="width: 16px; height: 16px;"> Mastodon (non-technical)</a></li>
-    <li><a rel="external" href="https://pfp.works/"><img src="{{ .Scratch.Get "svg" }}#pfp" alt="" style="width: 16px; height: 16px;"> PfP: Pain-free Passwords project</a></li>
-    <li><a rel="external" href="https://adblockplus.org/"><img src="{{ .Scratch.Get "svg" }}#abp" alt="" style="width: 16px; height: 16px;"> Adblock Plus project</a></li>
-    <li><a rel="external" href="https://github.com/palant?tab=repositories"><img src="{{ .Scratch.Get "svg" }}#github" style="width: 16px; height: 16px;"> GitHub repositories</a></li>
-    <li><a rel="external" href="http://stackoverflow.com/users/785541/wladimir-palant?tab=answers"><img src="{{ .Scratch.Get "svg" }}#stackoverflow" alt="" style="width: 16px; height: 16px;"> Stack Overflow answers</a></li>
+  <ul class="linklist">
+    <li><a class="iconLink twitter" rel="me" href="https://twitter.com/WPalant">Twitter</a></li>
+    <li><a class="iconLink mastodon" rel="me" href="https://infosec.exchange/@WPalant">Mastodon</a></li>
+    <li><a class="iconLink mastodon" rel="me" href="https://social.tchncs.de/@WPalant">Mastodon (non-technical)</a></li>
+    <li><a class="iconLink pfp" rel="external" href="https://pfp.works/">PfP: Pain-free Passwords project</a></li>
+    <li><a class="iconLink abp" rel="external" href="https://adblockplus.org/">Adblock Plus project</a></li>
+    <li><a class="iconLink github" rel="external" href="https://github.com/palant?tab=repositories">GitHub repositories</a></li>
+    <li><a class="iconLink stackoverflow" rel="external" href="http://stackoverflow.com/users/785541/wladimir-palant?tab=answers">Stack Overflow answers</a></li>
   </ul>
 </div>
