Got rid of various deprecation warnings

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -65,7 +65,7 @@
             <section id="comments-form">
               <h3>Comment</h3>
 
-              <form id="comments" action="#" data-path="{{ .Dir }}">
+              <form id="comments" action="#" data-path="{{ .File.Dir }}">
                 <div class="comments-wrapper">
                   <p id="Comment">
                     <strong>Enter your comment below.</strong>
