--- a/layouts/partials/summary.html
+++ b/layouts/partials/summary.html
@@ -1,10 +1,9 @@
-{{ if findRE "\\S(.|\n)*<p>{{toc}}</p>" . 1 -}}
-  {{ safeHTML (replaceRE "<p>{{toc}}</p>(.|\n)*" "" .) -}}
+{{ if findRE "\\S(.|\n)*<div id=\"tocBox\">" . 1 -}}
+  {{ safeHTML (replaceRE "<div id=\"tocBox\">(.|\n)*" "" .) -}}
 {{ else -}}
-  {{ $content := replace . "<p>{{toc}}</p>" "" -}}
-  {{ if findRE "^\\s*<p\\b(.|\n)*<h\\d" $content 1 -}}
-    {{ safeHTML (replaceRE "<h\\d(.|\n)*" "" $content) -}}
+  {{ if findRE "^\\s*<p\\b(.|\n)*<h\\d" . 1 -}}
+    {{ safeHTML (replaceRE "<h\\d(.|\n)*" "" .) -}}
   {{ else -}}
-    {{ safeHTML (replaceRE "(^(.|\n)*?<p\\b[^>]*>(.|\n)*?</p>(.|\n)*?<p\\b[^>]*>(.|\n)*?</p>)(.|\n)*" "$1" $content) -}}
+    {{ safeHTML (replaceRE "(^(.|\n)*?<p\\b[^>]*>(.|\n)*?</p>(.|\n)*?<p\\b[^>]*>(.|\n)*?</p>)(.|\n)*" "$1" .) -}}
   {{ end -}}
 {{ end -}}
