Improved previous commit to consider <section> elements

--- a/assets/scss/custom/_custom.scss
+++ b/assets/scss/custom/_custom.scss
@@ -138,7 +138,7 @@
 }
 
 /* Work-around for anchors being hidden below the header. */
-p, div, ul, form, main, footer, nav, h1, h2, h3, h4, h5, h6
+p, div, ul, form, main, footer, nav, section, h1, h2, h3, h4, h5, h6
 {
   &[id]::before
   {
