--- a/assets/scss/custom/_custom.scss
+++ b/assets/scss/custom/_custom.scss
@@ -189,20 +189,23 @@
 
 .search-input
 {
-  display: none;
-  margin-left: 0.5em;
   -moz-appearance: textfield;
   -webkit-appearance: textfield;
   border-width: 0px;
+  padding: 0;
+  margin: 0;
+  width: 0;
+  height: 0;
   outline: none;
-  min-width: 60px;
   background: transparent;
   color: var(--color-contrast-higher);
 }
 
 .search-input[data-active]
 {
-  display: inline;
+  margin-left: 0.5em;
+  width: 10em;
+  height: auto;
 }
 
 .search-results
