--- a/layouts/partials/components/socials.html
+++ b/layouts/partials/components/socials.html
@@ -4,7 +4,7 @@
             {{- range sort .socials "weight" -}}
                 <li class="socials-item">
                     <a href="{{ .url }}" rel="{{ if in (slice "twitter" "mastodon" "mastodon-nontech") .id }}me {{ end }}external" title="{{ .title }}">
-                        {{- partial "utils/icon.html" (dict "Deliver" $ "name" .icon "class" "social-icon") -}}
+                        {{- partial "utils/icon.html" (dict "$" $ "name" .icon "class" "social-icon") -}}
                     </a>
                 </li>
             {{- end -}}
