Published "The easier way to use lunr search with Hugo" article

--- a/assets/scss/custom/_custom.scss
+++ b/assets/scss/custom/_custom.scss
@@ -137,6 +137,14 @@
   }
 }
 
+.post-body
+{
+  a
+  {
+    text-decoration-color: var(--color-contrast-medium);
+  }
+}
+
 figure
 {
   text-align: center;
@@ -337,7 +345,7 @@ figure
   & a
   {
     text-decoration: underline;
-    text-decoration-color: var(--color-contrast-low);
+    text-decoration-color: var(--color-contrast-medium);
   }
 
   .footer-main
