Improved presentation of the license icon in footer

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -8,9 +8,7 @@
         {{ `[Privacy Policy / Datenschutzerklärung](/privacy/)` | markdownify }}
       </div>
       <div>
-        <a href="http://creativecommons.org/licenses/by-sa/4.0/" rel="license external">
-          <img src="/icons/cc-by-sa.svg" alt="Creative Commons Attribution-ShareAlike 4.0 International License">
-        </a>
+        <a href="http://creativecommons.org/licenses/by-sa/4.0/" rel="license external"><img src="{{partial "res" "icons/cc-by-sa.svg" }}" alt="Creative Commons Attribution-ShareAlike 4.0 International License"></a>
         Content under <a href="http://creativecommons.org/licenses/by-sa/4.0/" rel="license external">CC BY-SA 4.0 license</a><br>
         Powered by <a href="https://github.com/gohugoio/hugo" rel="external">Hugo</a> |
         Theme is <a href="https://github.com/reuixiy/hugo-theme-meme" rel="external">MemE</a>
