--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -4,8 +4,8 @@
 
     <div class="footer-main">
       <div>
-        {{ `[Legal Notice / Impressum](/impressum/)` | markdownify }}<br>
-        {{ `[Privacy Policy / Datenschutzerklärung](/privacy/)` | markdownify }}
+        {{ `[Impressum](/impressum/)` | markdownify }}<br>
+        {{ `[Privacy Policy](/privacy/)` | markdownify }}
       </div>
       <div>
         <a href="http://creativecommons.org/licenses/by-sa/4.0/" rel="license external"><img src="{{partial "res" "icons/cc-by-sa.svg" }}" alt="Creative Commons Attribution-ShareAlike 4.0 International License"></a>
