Make sure the submitting the comments form without JavaScript won't put all the data into logs and hide the form when JavaScript is disabled

--- a/layouts/partials/components/comments.html
+++ b/layouts/partials/components/comments.html
@@ -45,7 +45,7 @@
   {{ end }}
 </section>
 
-<form id="comments-form" action="#" data-path="{{ .File.Dir }}">
+<form id="comments-form" action="#" method="POST" data-path="{{ .File.Dir }}" hidden>
   <h4>Leave a comment</h4>
   <div class="comments-form-header">
     <div>
