--- a/layouts/partials/components/comments.html
+++ b/layouts/partials/components/comments.html
@@ -13,10 +13,13 @@
             </a>
             <span class="comment-author" itemprop="creator">
               {{- with .Params.authorUrl -}}<a rel="nofollow" href="{{.}}">{{- end -}}
-              {{ .Params.author }}
+              {{ .Params.author | default "Someone" }}
               {{- with .Params.authorUrl -}}</a>{{- end -}}
             </span>
             <time class="comment-time" datetime="{{.PublishDate.UTC.Format "2006-01-02T15:04:05Z"}}" itemprop="datePublished">{{.PublishDate.UTC.Format "2006-01-02 15:04"}}</time>
+            {{- if eq .Params.type "mention" }}
+            mentioned this article in <a rel="nofollow" href="{{.Params.authorUrl}}">{{.Params.title | default .Params.authorUrl}}</a>
+            {{- end -}}
           </div>
           <div itemprop="commentText">
             {{ .Content }}
