--- a/layouts/partials/components/comments.html
+++ b/layouts/partials/components/comments.html
@@ -6,9 +6,10 @@
     <ul class="comments-list" itemscope itemtype="http://schema.org/UserComments">
       {{ range sort . ".Name" }}
       <li>
+        {{ $id := .Name | replaceRE `\..*` "" | replaceRE `^comment_` "c" }}
         <article class="comment u-comment {{ if eq .Params.type "mention" }}h-cite{{ else }}h-entry{{ end }}" itemprop="comment">
-          <div id="c{{.Params.id}}" class="comment-header">
-            <a href="#c{{.Params.id}}" class="anchor-link u-url" itemprop="url">
+          <div id="{{$id}}" class="comment-header">
+            <a href="#{{$id}}" class="anchor-link u-url" itemprop="url">
               {{ partial "utils/icon.html" (dict "$" . "name" .Site.Params.anchorIcon "class" "anchor-icon") }}
             </a>
             <span class="comment-author p-author h-card" itemprop="creator">
@@ -29,9 +30,10 @@
             {{ .Content }}
             {{ with $.Resources.Match (printf "comment_%s_reply_*" .Params.id) }}
               {{ range sort . ".Name" }}
+                {{ $id := .Name | replaceRE `\..*` "" | replaceRE `^comment_` "c" | replaceRE `_reply_` "r"}}
                 <div class="comment u-comment h-entry">
-                  <div id="c{{.Params.id}}_reply" class="comment-header">
-                    <a href="#c{{.Params.id}}_reply" class="anchor-link u-url" itemprop="url">
+                  <div id="{{$id}}" class="comment-header">
+                    <a href="#{{$id}}" class="anchor-link u-url" itemprop="url">
                       {{ partial "utils/icon.html" (dict "$" . "name" .Site.Params.anchorIcon "class" "anchor-icon") }}
                     </a>
                     <span class="comment-author p-author h-card">{{ with .Params.author }}{{ . }}{{ else }}{{ .Site.Author.name }}{{ end }}</span>
