--- a/layouts/index.mozillarss.xml
+++ b/layouts/index.mozillarss.xml
@@ -1,1 +1,1 @@
-{{- partial "rss.xml" (dict "pages" (where .Site.RegularPages "Params.categories" "intersect" (slice "mozilla" "gecko" "security")) "scope" . ) -}}
+{{- partial "rss.xml" (dict "pages" (where .Site.RegularPages "Params.categories" "intersect" (slice "mozilla" "gecko" "security" "privacy")) "scope" . ) -}}
