--- a/layouts/partials/components/socials.html
+++ b/layouts/partials/components/socials.html
@@ -3,7 +3,7 @@
         <ul class="socials">
             {{- range sort .socials "weight" -}}
                 <li class="socials-item">
-                    <a href="{{ .url }}" rel="{{ if in (slice "twitter" "mastodon" "mastodon-nontech") .id }}me {{ end }}external" title="{{ .title }}">
+                    <a href="{{ .url }}" rel="{{ if in (slice "twitter" "mastodon") .id }}me {{ end }}external" title="{{ .title }}">
                         {{- partial "utils/icon.html" (dict "$" $ "name" .icon "class" "social-icon") -}}
                     </a>
                 </li>
