Replaced Adelle font by Philosopher

--- a/assets/scss/custom/_custom.scss
+++ b/assets/scss/custom/_custom.scss
@@ -40,9 +40,9 @@
 
 @font-face
 {
-  font-family: "Adelle";
+  font-family: "Philosopher";
   font-display: block;
-  src: url('/fonts/Adelle_Reg.woff') format('woff');
+  src: url('/fonts/Philosopher-Regular.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
@@ -50,18 +50,18 @@
 
 @font-face
 {
-  font-family: "Adelle";
+  font-family: "Philosopher";
   font-display: block;
-  src: url('/fonts/Adelle_Italic.woff') format('woff');
+  src: url('/fonts/Philosopher-Italic.woff') format('woff');
   font-weight: normal;
   font-style: italic;
 }
 
 @font-face
 {
-  font-family: "Adelle";
+  font-family: "Philosopher";
   font-display: block;
-  src: url('/fonts/Adelle_Bold.woff') format('woff');
+  src: url('/fonts/Philosopher-Bold.woff') format('woff');
   font-weight: bold;
   font-style: normal;
 }
@@ -69,9 +69,9 @@
 
 @font-face
 {
-  font-family: "Adelle";
+  font-family: "Philosopher";
   font-display: block;
-  src: url('/fonts/Adelle_BoldItalic.woff') format('woff');
+  src: url('/fonts/Philosopher-BoldItalic.woff') format('woff');
   font-weight: bold;
   font-style: italic;
 }
