Further removed unnecessary margins in table of contents

--- a/assets/scss/custom/_custom.scss
+++ b/assets/scss/custom/_custom.scss
@@ -180,12 +180,11 @@ figure
   & > ul
   {
     padding: 0;
-    margin-bottom: 0;
   }
 
   ul
   {
-    margin-top: 0;
+    margin: 0;
     list-style: none;
   }
 }
