--- a/assets/scss/custom/_custom.scss
+++ b/assets/scss/custom/_custom.scss
@@ -40,38 +40,40 @@
 
 @font-face
 {
-  font-family: "Philosopher";
+  font-family: "Lato";
   font-display: block;
-  src: url('/fonts/Philosopher-Regular.woff') format('woff');
+  src: url('/fonts/LatoLatin-Regular.woff2') format('woff2'),
+       url('/fonts/LatoLatin-Regular.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
 
-
 @font-face
 {
-  font-family: "Philosopher";
+  font-family: "Lato";
   font-display: block;
-  src: url('/fonts/Philosopher-Italic.woff') format('woff');
+  src: url('/fonts/LatoLatin-Italic.woff2') format('woff2'),
+       url('/fonts/LatoLatin-Italic.woff') format('woff');
   font-weight: normal;
   font-style: italic;
 }
 
 @font-face
 {
-  font-family: "Philosopher";
+  font-family: "Lato";
   font-display: block;
-  src: url('/fonts/Philosopher-Bold.woff') format('woff');
+  src: url('/fonts/LatoLatin-Bold.woff2') format('woff2'),
+       url('/fonts/LatoLatin-Bold.woff') format('woff');
   font-weight: bold;
   font-style: normal;
 }
 
-
 @font-face
 {
-  font-family: "Philosopher";
+  font-family: "Lato";
   font-display: block;
-  src: url('/fonts/Philosopher-BoldItalic.woff') format('woff');
+  src: url('/fonts/LatoLatin-BoldItalic.woff2') format('woff2'),
+       url('/fonts/LatoLatin-BoldItalic.woff') format('woff');
   font-weight: bold;
   font-style: italic;
 }
