--- a/assets/scss/custom/_custom.scss
+++ b/assets/scss/custom/_custom.scss
@@ -80,40 +80,40 @@
 
 @font-face
 {
-  font-family: "SometypeMono";
+  font-family: "mononoki";
   font-display: block;
-  src: url('/fonts/SometypeMono-Regular.woff2') format('woff2'),
-       url('/fonts/SometypeMono-Regular.woff') format('woff');
+  src: url('/fonts/mononoki-Regular.woff2') format('woff2'),
+       url('/fonts/mononoki-Regular.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face
 {
-  font-family: "SometypeMono";
+  font-family: "mononoki";
   font-display: block;
-  src: url('/fonts/SometypeMono-RegularItalic.woff2') format('woff2'),
-       url('/fonts/SometypeMono-RegularItalic.woff') format('woff');
+  src: url('/fonts/mononoki-Italic.woff2') format('woff2'),
+       url('/fonts/mononoki-Italic.woff') format('woff');
   font-weight: normal;
   font-style: italic;
 }
 
 @font-face
 {
-  font-family: "SometypeMono";
+  font-family: "SourceCodePro";
   font-display: block;
-  src: url('/fonts/SometypeMono-Bold.woff2') format('woff2'),
-       url('/fonts/SometypeMono-Bold.woff') format('woff');
+  src: url('/fonts/mononoki-Bold.woff2') format('woff2'),
+       url('/fonts/mononoki-Bold.woff') format('woff');
   font-weight: bold;
   font-style: normal;
 }
 
 @font-face
 {
-  font-family: "SometypeMono";
+  font-family: "mononoki";
   font-display: block;
-  src: url('/fonts/SometypeMono-BoldItalic.woff2') format('woff2'),
-       url('/fonts/SometypeMono-BoldItalic.woff') format('woff');
+  src: url('/fonts/mononoki-BoldItalic.woff2') format('woff2'),
+       url('/fonts/mononoki-BoldItalic.woff') format('woff');
   font-weight: bold;
   font-style: italic;
 }
