--- a/assets/scss/custom/_custom.scss
+++ b/assets/scss/custom/_custom.scss
@@ -164,6 +164,19 @@ figure
   margin: 0;
 }
 
+h3
+{
+  font-size: 1.4em;
+}
+h4
+{
+  font-size: 1.1em;
+}
+h5
+{
+  font-size: 1em;
+}
+
 code
 {
   font-size: 90%;
