Better styling of inline code sections

--- a/assets/scss/custom/_custom.scss
+++ b/assets/scss/custom/_custom.scss
@@ -211,6 +211,15 @@ code
 
 /* Code highlighting */
 
+p code
+{
+  font-size: 100%;
+  background: none;
+  padding: 0;
+  color: var(--chroma-literal-color);
+  filter: brightness(75%);
+}
+
 .chroma
 {
   .k
