--- a/themes/meme/assets/scss/layout/_single.scss
+++ b/themes/meme/assets/scss/layout/_single.scss
@@ -41,6 +41,7 @@
         max-width: 100%;
         border: 1px solid var(--color-contrast-lower);
         clear: both;
+        height: auto;
     }
     video {
         display: block;
