--- a/themes/meme/layouts/partials/footer.html
+++ b/themes/meme/layouts/partials/footer.html
@@ -2,6 +2,9 @@
     <footer id="footer" class="footer">
         <div class="footer-inner">
             <div class="site-info">
+              {{- if .Site.Params.displayCopyleftSymbol -}}
+                  <span class="copyleft-symbol">🄯</span>&nbsp;
+              {{- end -}}
               {{- if .Site.Params.displayCopyrightSymbol -}}
                   ©&nbsp;
               {{- end -}}
@@ -12,12 +15,12 @@
               {{- now.Format "2006" -}}
 
               {{- with .Site.Params.iconBetweenYearAndAuthor -}}
-                  &nbsp;{{- partial "utils/icon.html" (dict "$" $ "name" . "class" "footer-icon") -}}&nbsp;
-              {{- else -}}
-                  &nbsp;
+                  &nbsp;{{- partial "utils/icon.html" (dict "$" $ "name" . "class" "footer-icon") -}}
               {{- end -}}
 
-              {{- .Site.Author.name -}}
+              {{- if .Site.Params.displaySiteAuthorName -}}
+                  &nbsp;{{- .Site.Author.name -}}
+              {{- end -}}
             </div>
 
             {{- if .Site.Params.displayPoweredBy }}
