Updated MemE theme to current state (revision cc33951) and enabled Share on Hacker News button

--- a/themes/meme/assets/scss/components/_post-share.scss
+++ b/themes/meme/assets/scss/components/_post-share.scss
@@ -101,6 +101,12 @@
     }
 }
 
+.hackernews-icon {
+    &:hover {
+        fill: #FF6600;
+    }
+}
+
 .email-icon {
     &:hover {
         fill: #FFDF00;
