--- a/themes/meme/layouts/partials/footer.html
+++ b/themes/meme/layouts/partials/footer.html
@@ -19,7 +19,7 @@
               {{- end -}}
 
               {{- if .Site.Params.displaySiteAuthorName -}}
-                  &nbsp;{{- .Site.Author.name -}}
+                  &nbsp;{{- .Site.Params.author.name -}}
               {{- end -}}
             </div>
 
