Fixed previous commit

--- a/themes/meme/layouts/partials/utils/open-graph.html
+++ b/themes/meme/layouts/partials/utils/open-graph.html
@@ -45,5 +45,5 @@
     <meta property="og:type" content="website" />
 {{- end }}
 {{- with $author.fediverse -}}
-    <meta property="fediverse:creator" content="{{ . }}" />
+    <meta name="fediverse:creator" content="{{ . }}" />
 {{- end }}
